# ESP32_CAM

./: CMakeLists.txt  partitions.csv  partitions.csv.bak
components/: component_conf.mk
components/font/: CMakeLists.txt  myFont.c  myFont.h  number_temp.h  snow16.c
components/font/LvglFontTool/: config.ini
components/font/LvglFontTool/Font/all font/: myFont.c
components/font/LvglFontTool/Font/common font/: myFont.c
components/font/LvglFontTool/Font/方正喵呜体/: myFont.c
components/http/: http.c
components/image/: img2048.c  imgabout.c  imgcalendar.c  imgcam.c  imgcloud.c  imgcolor.c  imgface.c  imgheart.c  imgimu.c  imgmusic.c  imgset.c  imgsnake.c  imgspectrum.c  kevincoooool.c  myimg.c  weather.h  weather0.c  weather1.c  weather10.c  weather11.c  weather13.c  weather14.c  weather15.c  weather16.c  weather19.c  weather20.c  weather21.c  weather22.c  weather23.c  weather24.c  weather26.c  weather28.c  weather30.c  weather31.c  weather32.c  weather35.c  weather36.c  weather4.c  weather40.c  weather5.c  (+1 more)
components/lv_lib_gif/: CMakeLists.txt
components/lv_lib_png/: CMakeLists.txt  component.mk
components/lvgl/src/: lv_conf_internal.h
components/lvgl_esp32_drivers/: lvgl_compment.c
components/lvgl_esp32_drivers/lvgl_tft/: st7789.h
components/myimg/: CMakeLists.txt  myimg.c  myimg.h
components/nvs_flash/include/: nvs_flash.h
components/read_nvs/: updata.c
main/: CMakeLists.txt  app_wifi.c  main.c
main/button/: button.c
main/page/: app_anim.c  app_anim.h  page_home.c  page_menu.c  page_start.c  page_start.h  spage.c  spage.h
