idf_component_register(SRCS "main.c"
                            "./page/app_anim.c"
                            "./page/page_start.c"
                            "./page/spage.c"
                            "./page"
                            "./button/bsp_button.c"
                            "./button/button.c"
                            "../components/lv_lib_png/lv_png.c"
                            "../components/lv_lib_png/lodepng.c"
                            "../components/lv_lib_png/png_decoder_test.c"
                            "../components/adc/bsp_adc.c"
                       INCLUDE_DIRS "./page"
                                    "./button"
                                    "../components/lv_lib_png"
                                    "../components/adc" )
