idf_component_register(SRCS "main.c"
                            "./page/app_anim.c"
                            "./page/page_start.c"
                            "./page/spage.c"
                            "./page/page_home.c"
                            "./page/page_menu.c"
                            "./page"
                            "./app_wifi.c"
                            "./button/bsp_button.c"
                            "./button/button.c"
                            "../components/lv_lib_png/lv_png.c"
                            "../components/lv_lib_png/lodepng.c"
                            "../components/lv_lib_png/png_decoder_test.c"
                            "../components/adc/bsp_adc.c"
                            "../components/time/gui_time.c"
                            "../components/http/http.c"
                            "../components/image/myimg.c"
                            "../components/image/img2048.c"
                            "../components/image/imgabout.c"
                            "../components/image/imgcalendar.c"
                            "../components/image/imgcam.c"
                            "../components/image/imgcloud.c"
                            "../components/image/imgcolor.c"
                            "../components/image/imgface.c"
                            "../components/image/imgheart.c"
                            "../components/image/imgimu.c"
                            "../components/image/imgmusic.c"
                            "../components/image/imgset.c"
                            "../components/image/imgsnake.c"
                            "../components/image/imgspectrum.c"
                            "../components/image/kevincoooool.c"
                            "../components/image/taikong001.c"
                            "../components/image/taikong002.c"
                            "../components/image/taikong003.c"
                            "../components/image/taikong004.c"
                            "../components/image/taikong005.c"
                            "../components/image/taikong006.c"
                            "../components/image/taikong007.c"
                            "../components/image/taikong008.c"
                            "../components/image/taikong009.c"
                            "../components/image/weather.c"
                            "../components/read_nvs/updata.c"
                            "../components/json/cJSON/cJSON.c"
                       INCLUDE_DIRS "."
                                    "./page"
                                    "./button"
                                    "../components/lv_lib_png"
                                    "../components/adc"
                                    "../components/time"
                                    "../components/http" 
                                    "../components/image"
                                    "../components/read_nvs"
                                    "../components/spi_flash/include"
                                    "../components/json/cJSON"
                                    "../../../components/spiffs/include")
